--- a/css/main.css
+++ b/css/main.css
@@ -202,7 +202,7 @@ p {
 }
 
 .section3 {
-  background-color: #f6f6f6;
+  background-color: #e9f6f6;
   padding: 2rem;
 }
 
@@ -277,7 +277,7 @@ p {
 }
 
 footer {
-  background-color: #f6f6f6;
+  background-color: #e9f6f6;
   padding: 3rem 4rem 4rem;
   text-align: center;
 }
