--- a/css/main.css
+++ b/css/main.css
@@ -131,7 +131,13 @@ a:focus {
 
 header {
   background-color: #fff;
-  padding: 6rem 4rem;
+  padding: 4rem;
+}
+
+@media only screen and (min-width: 720px) {
+  .header {
+    padding: 6rem 4rem;
+  }
 }
 
 .section1 {
