--- a/css/main.css
+++ b/css/main.css
@@ -135,8 +135,8 @@ header {
 }
 
 @media only screen and (min-width: 720px) {
-  .header {
-    padding: 6rem 4rem;
+  header {
+    padding: 8rem 4rem;
   }
 }
 
@@ -156,8 +156,14 @@ h1 {
 }
 
 h2 {
-  
-  font-size: 36px;
+  font-family: 'Libre Baskerville', serif;
+  font-size: 24px;
+}
+
+@media only screen and (min-width: 720px) {
+  h2 {
+    font-size: 36px;
+  }
 }
 
 h3 {
@@ -176,12 +182,13 @@ p {
 .section2 {
   display: flex;
   flex-direction: column;
-  margin-bottom: 4rem;
+  margin-bottom: 2rem;
 }
 
 @media only screen and (min-width: 720px) {
   .section2 {
     flex-direction: row;
+    margin-bottom: 6rem;
   }
 }
 
@@ -195,8 +202,14 @@ p {
 .section2 .first {
   background: url('../img/photo.jpg') no-repeat;
   background-position: 50% 50%;
-  background-size: 720px auto;
+  background-size: cover;
   min-height: 320px;
+}
+
+@media only screen and (min-width: 720px) {
+  .section2 .first {
+    background-size: 720px auto;
+  }
 }
 
 .section2 .second {
@@ -261,6 +274,12 @@ p {
   padding: 0;
 }
 
+.recommend-list li {
+  border-bottom: 1px solid #ccc;
+  margin-bottom: 2rem;
+  padding-bottom: 2rem;
+}
+
 @media only screen and (min-width: 720px) {
   .recommend-list {
     display: flex;
@@ -268,9 +287,15 @@ p {
   }
 
   .recommend-list li {
+    border: 0;
+    margin: 0;
     padding: 2rem 4rem;
     width: 50%;
   }
+}
+
+.recommend-list li:last-child {
+  border: none;
 }
 
 .recommend-list p {
@@ -284,7 +309,7 @@ p {
 
 footer {
   background-color: #e9f6f6;
-  padding: 3rem 4rem 4rem;
+  padding: 3rem 1rem 4rem;
   text-align: center;
 }
 
