--- a/css/main.css
+++ b/css/main.css
@@ -1,779 +1,1 @@
-/*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
-
-/* Document
-   ========================================================================== */
-
-/**
- * 1. Correct the line height in all browsers.
- * 2. Prevent adjustments of font size after orientation changes in
- *    IE on Windows Phone and in iOS.
- */
-
-html {
-  line-height: 1.15; /* 1 */
-  -ms-text-size-adjust: 100%; /* 2 */
-  -webkit-text-size-adjust: 100%; /* 2 */
-}
-
-/* Sections
-   ========================================================================== */
-
-/**
- * Remove the margin in all browsers (opinionated).
- */
-
-body {
-  margin: 0;
-}
-
-/**
- * Add the correct display in IE 9-.
- */
-
-article,
-aside,
-footer,
-header,
-nav,
-section {
-  display: block;
-}
-
-/**
- * Correct the font size and margin on `h1` elements within `section` and
- * `article` contexts in Chrome, Firefox, and Safari.
- */
-
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-
-/* Grouping content
-   ========================================================================== */
-
-/**
- * Add the correct display in IE 9-.
- * 1. Add the correct display in IE.
- */
-
-figcaption,
-figure,
-main { /* 1 */
-  display: block;
-}
-
-/**
- * Add the correct margin in IE 8.
- */
-
-figure {
-  margin: 1em 40px;
-}
-
-/**
- * 1. Add the correct box sizing in Firefox.
- * 2. Show the overflow in Edge and IE.
- */
-
-hr {
-  box-sizing: content-box; /* 1 */
-  height: 0; /* 1 */
-  overflow: visible; /* 2 */
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-
-pre {
-  font-family: monospace, monospace; /* 1 */
-  font-size: 1em; /* 2 */
-}
-
-/* Text-level semantics
-   ========================================================================== */
-
-/**
- * 1. Remove the gray background on active links in IE 10.
- * 2. Remove gaps in links underline in iOS 8+ and Safari 8+.
- */
-
-a {
-  background-color: transparent; /* 1 */
-  -webkit-text-decoration-skip: objects; /* 2 */
-}
-
-/**
- * 1. Remove the bottom border in Chrome 57- and Firefox 39-.
- * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
- */
-
-abbr[title] {
-  border-bottom: none; /* 1 */
-  text-decoration: underline; /* 2 */
-  text-decoration: underline dotted; /* 2 */
-}
-
-/**
- * Prevent the duplicate application of `bolder` by the next rule in Safari 6.
- */
-
-b,
-strong {
-  font-weight: inherit;
-}
-
-/**
- * Add the correct font weight in Chrome, Edge, and Safari.
- */
-
-b,
-strong {
-  font-weight: bolder;
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-
-code,
-kbd,
-samp {
-  font-family: monospace, monospace; /* 1 */
-  font-size: 1em; /* 2 */
-}
-
-/**
- * Add the correct font style in Android 4.3-.
- */
-
-dfn {
-  font-style: italic;
-}
-
-/**
- * Add the correct background and color in IE 9-.
- */
-
-mark {
-  background-color: #ff0;
-  color: #000;
-}
-
-/**
- * Add the correct font size in all browsers.
- */
-
-small {
-  font-size: 80%;
-}
-
-/**
- * Prevent `sub` and `sup` elements from affecting the line height in
- * all browsers.
- */
-
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-sup {
-  top: -0.5em;
-}
-
-/* Embedded content
-   ========================================================================== */
-
-/**
- * Add the correct display in IE 9-.
- */
-
-audio,
-video {
-  display: inline-block;
-}
-
-/**
- * Add the correct display in iOS 4-7.
- */
-
-audio:not([controls]) {
-  display: none;
-  height: 0;
-}
-
-/**
- * Remove the border on images inside links in IE 10-.
- */
-
-img {
-  border-style: none;
-}
-
-/**
- * Hide the overflow in IE.
- */
-
-svg:not(:root) {
-  overflow: hidden;
-}
-
-/* Forms
-   ========================================================================== */
-
-/**
- * 1. Change the font styles in all browsers (opinionated).
- * 2. Remove the margin in Firefox and Safari.
- */
-
-button,
-input,
-optgroup,
-select,
-textarea {
-  font-family: sans-serif; /* 1 */
-  font-size: 100%; /* 1 */
-  line-height: 1.15; /* 1 */
-  margin: 0; /* 2 */
-}
-
-/**
- * Show the overflow in IE.
- * 1. Show the overflow in Edge.
- */
-
-button,
-input { /* 1 */
-  overflow: visible;
-}
-
-/**
- * Remove the inheritance of text transform in Edge, Firefox, and IE.
- * 1. Remove the inheritance of text transform in Firefox.
- */
-
-button,
-select { /* 1 */
-  text-transform: none;
-}
-
-/**
- * 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
- *    controls in Android 4.
- * 2. Correct the inability to style clickable types in iOS and Safari.
- */
-
-button,
-html [type="button"], /* 1 */
-[type="reset"],
-[type="submit"] {
-  -webkit-appearance: button; /* 2 */
-}
-
-/**
- * Remove the inner border and padding in Firefox.
- */
-
-button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
-}
-
-/**
- * Restore the focus styles unset by the previous rule.
- */
-
-button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText;
-}
-
-/**
- * Correct the padding in Firefox.
- */
-
-fieldset {
-  padding: 0.35em 0.75em 0.625em;
-}
-
-/**
- * 1. Correct the text wrapping in Edge and IE.
- * 2. Correct the color inheritance from `fieldset` elements in IE.
- * 3. Remove the padding so developers are not caught out when they zero out
- *    `fieldset` elements in all browsers.
- */
-
-legend {
-  box-sizing: border-box; /* 1 */
-  color: inherit; /* 2 */
-  display: table; /* 1 */
-  max-width: 100%; /* 1 */
-  padding: 0; /* 3 */
-  white-space: normal; /* 1 */
-}
-
-/**
- * 1. Add the correct display in IE 9-.
- * 2. Add the correct vertical alignment in Chrome, Firefox, and Opera.
- */
-
-progress {
-  display: inline-block; /* 1 */
-  vertical-align: baseline; /* 2 */
-}
-
-/**
- * Remove the default vertical scrollbar in IE.
- */
-
-textarea {
-  overflow: auto;
-}
-
-/**
- * 1. Add the correct box sizing in IE 10-.
- * 2. Remove the padding in IE 10-.
- */
-
-[type="checkbox"],
-[type="radio"] {
-  box-sizing: border-box; /* 1 */
-  padding: 0; /* 2 */
-}
-
-/**
- * Correct the cursor style of increment and decrement buttons in Chrome.
- */
-
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-  height: auto;
-}
-
-/**
- * 1. Correct the odd appearance in Chrome and Safari.
- * 2. Correct the outline style in Safari.
- */
-
-[type="search"] {
-  -webkit-appearance: textfield; /* 1 */
-  outline-offset: -2px; /* 2 */
-}
-
-/**
- * Remove the inner padding and cancel buttons in Chrome and Safari on macOS.
- */
-
-[type="search"]::-webkit-search-cancel-button,
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-/**
- * 1. Correct the inability to style clickable types in iOS and Safari.
- * 2. Change font properties to `inherit` in Safari.
- */
-
-::-webkit-file-upload-button {
-  -webkit-appearance: button; /* 1 */
-  font: inherit; /* 2 */
-}
-
-/* Interactive
-   ========================================================================== */
-
-/*
- * Add the correct display in IE 9-.
- * 1. Add the correct display in Edge, IE, and Firefox.
- */
-
-details, /* 1 */
-menu {
-  display: block;
-}
-
-/*
- * Add the correct display in all browsers.
- */
-
-summary {
-  display: list-item;
-}
-
-/* Scripting
-   ========================================================================== */
-
-/**
- * Add the correct display in IE 9-.
- */
-
-canvas {
-  display: inline-block;
-}
-
-/**
- * Add the correct display in IE.
- */
-
-template {
-  display: none;
-}
-
-/* Hidden
-   ========================================================================== */
-
-/**
- * Add the correct display in IE 10-.
- */
-
-[hidden] {
-  display: none;
-}
-
-
-/*! HTML5 Boilerplate v6.0.1 | MIT License | https://html5boilerplate.com/ */
-
-/*
- * What follows is the result of much research on cross-browser styling.
- * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
- * Kroc Camen, and the H5BP dev community and team.
- */
-
-/* ==========================================================================
-   Base styles: opinionated defaults
-   ========================================================================== */
-
-html {
-  box-sizing: border-box;
-  color: #222;
-  font-size: 1em;
-  line-height: 1.4;
-  margin: 0;
-  padding: 0;
-}
-
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-
-/*
- * Remove text-shadow in selection highlight:
- * https://twitter.com/miketaylr/status/12228805301
- *
- * Vendor-prefixed and regular ::selection selectors cannot be combined:
- * https://stackoverflow.com/a/16982510/7133471
- *
- * Customize the background color to match your design.
- */
-
-::-moz-selection {
-  background: #b3d4fc;
-  text-shadow: none;
-}
-
-::selection {
-  background: #b3d4fc;
-  text-shadow: none;
-}
-
-/*
- * A better looking default horizontal rule
- */
-
-hr {
-  display: block;
-  height: 1px;
-  border: 0;
-  border-top: 1px solid #ccc;
-  margin: 1em 0;
-  padding: 0;
-}
-
-/*
- * Remove the gap between audio, canvas, iframes,
- * images, videos and the bottom of their containers:
- * https://github.com/h5bp/html5-boilerplate/issues/440
- */
-
-audio,
-canvas,
-iframe,
-img,
-svg,
-video {
-  vertical-align: middle;
-}
-
-/*
- * Remove default fieldset styles.
- */
-
-fieldset {
-  border: 0;
-  margin: 0;
-  padding: 0;
-}
-
-/*
- * Allow only vertical resizing of textareas.
- */
-
-textarea {
-  resize: vertical;
-}
-
-/* ==========================================================================
-   Browser Upgrade Prompt
-   ========================================================================== */
-
-.browserupgrade {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
-}
-
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-
-body {
-  /*background-image: url(../img/hypnotize.png);
-  background-size: 200px auto;*/
-  font-family: 'Open Sans', sans-serif;
-  font-size: 18px;
-  line-height: 1.6;
-  margin: 0;
-  padding: 0;
-}
-
-img {
-  height: auto;
-  max-width: 100%;
-}
-
-a {
-  color: #e3561d;
-  text-decoration: none;
-}
-
-a:hover,
-a:focus {
-  text-decoration: underline;
-}
-
-header {
-  background-color: #fff;
-  padding: 4rem;
-}
-
-@media only screen and (min-width: 720px) {
-  header {
-    padding: 8rem 4rem;
-  }
-}
-
-.section1 {
-  margin: 0 auto;
-  max-width: 720px;
-}
-
-header p {
-  font-size: 24px;
-}
-
-h1 {
-  font-family: 'Libre Baskerville', serif;
-  font-size: 48px;
-  line-height: 1.2;
-  margin-top: 0;
-}
-
-h2 {
-  font-family: 'Libre Baskerville', serif;
-  font-size: 24px;
-}
-
-@media only screen and (min-width: 720px) {
-  h2 {
-    font-size: 36px;
-  }
-}
-
-h3 {
-  margin-bottom: 0;
-}
-
-h4 {
-  font-family: 'Libre Baskerville', serif;
-  margin-bottom: 0;
-}
-
-p {
-  margin-top: 0;
-}
-
-.section2 {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 2rem;
-}
-
-@media only screen and (min-width: 720px) {
-  .section2 {
-    flex-direction: row;
-    margin-bottom: 6rem;
-  }
-}
-
-@media only screen and (min-width: 720px) {
-  .section2 .first,
-  .section2 .second {
-    width: 50%;
-  }
-}
-
-.section2 .first {
-  background: url('../img/photo.jpg') no-repeat;
-  background-position: 50% 50%;
-  background-size: cover;
-  min-height: 320px;
-}
-
-@media only screen and (min-width: 720px) {
-  .section2 .first {
-    background-size: 720px auto;
-  }
-}
-
-.section2 .second {
-  padding: 1rem 4rem;
-}
-
-.section2 .second h4 {
-  margin-bottom: 1rem;
-}
-
-.section3 {
-  /*background-color: #e9f6f6;*/
-  padding: 2rem;
-}
-
-.work-grid {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.work-grid li {
-  margin-bottom: 6rem;
-}
-
-.work-grid img {
-  box-shadow: 0 0 20px rgba(0, 0, 0, .2);
-}
-
-.work-grid p {
-  color: #999;
-  font-size: 16px;
-  margin-bottom: 0;
-}
-
-@media only screen and (min-width: 540px) {
-  .work-grid {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .work-grid li {
-    margin-bottom: 2rem;
-    padding: 1rem;
-    width: 50%;
-  }
-}
-
-@media only screen and (min-width: 720px) {
-  .work-grid li {
-    width: 33.333%;
-  }
-}
-
-.section4 {
-  padding: 2rem;
-}
-
-.recommend-list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.recommend-list li {
-  border-bottom: 1px solid #ccc;
-  margin-bottom: 2rem;
-  padding-bottom: 2rem;
-}
-
-@media only screen and (min-width: 720px) {
-  .recommend-list {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .recommend-list li {
-    border: 0;
-    margin: 0;
-    padding: 2rem 4rem;
-    width: 50%;
-  }
-}
-
-.recommend-list li:last-child {
-  border: none;
-}
-
-.recommend-list p {
-  font-size: 16px;
-}
-
-.recommend-list h4+p {
-  color: #999;
-  font-style: italic;
-}
-
-footer {
-  /*background-color: #e9f6f6;*/
-  padding: 3rem 1rem 4rem;
-  text-align: center;
-}
-
-.footer-links {
-  color: #e3561d;
-  font-family: 'Libre Baskerville', serif;
-}
-
-.small {
-  color: #999;
-  font-size: 12px;
-}
-
-body {
-  margin: 0 auto;
-  max-width: 1440px;
-}
+/*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */img{max-width:100%}html{box-sizing:border-box}footer,header,main,section{display:block}html{padding:0}a:focus,a:hover{text-decoration:underline}h1{margin:.67em 0}a{background-color:transparent;-webkit-text-decoration-skip:objects}img{border-style:none;height:auto}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}/*! HTML5 Boilerplate v6.0.1 | MIT License | https://html5boilerplate.com/ */html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;color:#222;font-size:1em;line-height:1.4;margin:0}*{box-sizing:inherit}::-moz-selection{background:#b3d4fc;text-shadow:none}img{vertical-align:middle}body{font-family:'Open Sans',sans-serif;font-size:18px;line-height:1.6;padding:0}.footer-links,h1,h2,h4{font-family:'Libre Baskerville',serif}a{color:#e3561d;text-decoration:none}header{background-color:#fff;padding:4rem}.section1{margin:0 auto;max-width:720px}h3,h4{margin-bottom:0}h1,p{margin-top:0}header p{font-size:24px}h1{font-size:48px;line-height:1.2}h2{font-size:24px}@media only screen and (min-width:720px){header{padding:8rem 4rem}h2{font-size:36px}}.work-grid p{font-size:16px}.section2{display:flex;flex-direction:column;margin-bottom:2rem}.section2 .first{background:url(img/photo.jpg) 50% 50% no-repeat;background-size:cover;min-height:320px}@media only screen and (min-width:720px){.section2{flex-direction:row;margin-bottom:6rem}.section2 .first,.section2 .second{width:50%}.section2 .first{background-size:720px auto}}.section2 .second{padding:1rem 4rem}.section2 .second h4{margin-bottom:1rem}.section3{padding:2rem}.work-grid{list-style:none;margin:0;padding:0}.work-grid li{margin-bottom:6rem}.work-grid img{box-shadow:0 0 20px rgba(0,0,0,.2)}.work-grid p{color:#999;margin-bottom:0}@media only screen and (min-width:540px){.work-grid{display:flex;flex-wrap:wrap}.work-grid li{margin-bottom:2rem;padding:1rem;width:50%}}@media only screen and (min-width:720px){.work-grid li{width:33.333%}}footer{padding:3rem 1rem 4rem;text-align:center}.footer-links{color:#e3561d}.small{color:#999;font-size:12px}body{margin:0 auto;max-width:1440px}
