--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
+/* 04/07/20 */
+
 @font-face {
     font-family: 'courier_primeregular';
     src: url('/fonts/courier_prime-webfont.woff2') format('woff2'),
@@ -63,7 +66,8 @@ img {
 }
 
 html {
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     color: #222;
     font-size: 1em;
     line-height: 1.4;
@@ -74,7 +78,8 @@ html {
 *,
 *:before,
 *:after {
-    box-sizing: inherit;
+    -webkit-box-sizing: inherit;
+            box-sizing: inherit;
 }
 
 img {
@@ -82,7 +87,7 @@ img {
 }
 
 body {
-	font-family: 'courier_primeregular', Courier New, Courier, Lucida Sans Typewriter, Lucida Typewriter, monospace; 
+    font-family: 'courier_primeregular', Courier New, Courier, Lucida Sans Typewriter, Lucida Typewriter, monospace; 
     font-size: 18px;
     line-height: 1.6;
     padding: 0;
@@ -99,7 +104,8 @@ a {
 
 /* A elements that don't have a class get default styles */
 a:not([class]) {
-    text-decoration-skip-ink: auto;
+    -webkit-text-decoration-skip: ink;
+            text-decoration-skip-ink: auto;
 }
 
 header {
@@ -166,14 +172,22 @@ p {
 }
 
 .section2 {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     margin-bottom: 2rem;
 }
 
 @media only screen and (min-width: 720px) {
     .section2 {
-      flex-direction: row;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: row;
+              flex-direction: row;
       margin-bottom: 6rem;
     }
 }
@@ -188,8 +202,10 @@ p {
     width: 100%;
     height: 100%;
     max-height: 540px;
-    object-fit: cover;
-    object-position: center;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: center;
+       object-position: center;
 }
 
 @media only screen and (min-width: 720px) {
@@ -231,7 +247,8 @@ p {
 
 .work-grid img {
     border-radius: 8px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
 
 .work-grid p {
@@ -242,8 +259,11 @@ p {
 
 @media only screen and (min-width: 540px) {
     .work-grid {
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
 }
 
 .work-grid li {
@@ -267,4 +287,3 @@ footer .small {
     font-size: 14px;
     color: #666;
 }
-
