--- a/css/main.css
+++ b/css/main.css
@@ -231,7 +231,7 @@ p {
 
 .work-grid img {
     border-radius: 8px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 1px 1px rgba(0,0,0,0.12), 0 8px 8px rgba(0,0,0,0.12), 0 16px 16px rgba(0,0,0,0.12);
 }
 
 .work-grid p {
