--- a/css/main.css
+++ b/css/main.css
@@ -258,6 +258,18 @@ p {
     margin-bottom: 0;
 }
 
+.work-grid [href] {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  word-break: break-all;
+  word-break: break-word;
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+}
+
 @media only screen and (min-width: 540px) {
     .work-grid {
       display: -webkit-box;
