--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,22 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+* Last Update: 9/18/20 12:02PM
+*/
+
 @font-face {
     font-family: 'courier_primeregular';
-    src: url('/fonts/courier_prime-webfont.woff2') format('woff2'),
-         url('/fonts/courier_prime-webfont.woff') format('woff');
+    src: url('../fonts/courier_prime-webfont.woff2') format('woff2'),
+         url('../fonts/courier_prime-webfont.woff') format('woff');
     font-display: swap;
     font-weight: normal;
     font-style: normal;
@@ -9,20 +24,31 @@
 
 @font-face {
     font-family: 'gilroy-extrabold';
-    src: url('/fonts/gilroy-extrabold-webfont.woff2') format('woff2'),
-         url('/fonts/gilroy-extrabold-webfont.woff') format('woff');
+    src: url('../fonts/gilroy-extrabold-webfont.woff2') format('woff2'),
+         url('../fonts/gilroy-extrabold-webfont.woff') format('woff');
     font-display: swap;
     font-weight: normal;
     font-style: normal;
 }
 
 html {
-    line-height: 1.15;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    color: #222;
+    font-size: 112.5%;
+    line-height: 1.4;
+    margin: 0;
+    padding: 0;
 }
 
 body {
+    background-color: #EEF5F1;
+    color: #4463AD;
+    font-family: 'courier_primeregular', 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace; 
+    line-height: 1.6;
     margin: 0 auto;
     max-width: 1440px;
+    padding: 0;
 }
 
 header,
@@ -46,6 +72,7 @@ main {
 
 a {
     background-color: transparent;
+    color: #008051;
     -webkit-text-decoration-skip: objects;
 }
 
@@ -56,21 +83,9 @@ a:focus {
 
 img {
     border-style: none;
-}
-
-::-webkit-file-upload-button {
-    -webkit-appearance: button;
-    font: inherit;
-}
-
-html {
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-    color: #222;
-    font-size: 1em;
-    line-height: 1.4;
-    margin: 0;
-    padding: 0;
+    height: auto;
+    max-width: 100%;
+    vertical-align: middle;
 }
 
 *,
@@ -80,24 +95,8 @@ html {
             box-sizing: inherit;
 }
 
-img {
-    vertical-align: middle;
-}
-
-body {
-    font-family: 'courier_primeregular', Courier New, Courier, Lucida Sans Typewriter, Lucida Typewriter, monospace; 
-    font-size: 18px;
-    line-height: 1.6;
-    padding: 0;
-}
-
-img {
-    height: auto;
-    max-width: 100%;
-}
-
-a {
-    color: #004CFF;
+*:focus {
+    outline: 2px dotted #008051;
 }
 
 /* A elements that don't have a class get default styles */
@@ -106,8 +105,21 @@ a:not([class]) {
             text-decoration-skip-ink: auto;
 }
 
+.btn {
+    border: 3px solid #f94500;
+    color: #f94500;
+    padding: 0.5rem 1rem;
+    text-decoration: none;
+}
+
+.btn:hover,
+.btn:focus {
+    background-color: #f94500;
+    color: #EEF5F1;
+    text-decoration: none;
+}
+
 header {
-    background-color: #fff;
     padding: 4rem;
 }
 
@@ -118,7 +130,7 @@ header {
 }
   .section1 {
     margin: 0 auto;
-    max-width: 720px;
+    max-width: 718px;
 }
 
 header p {
@@ -132,7 +144,6 @@ h4,
 h5 {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    font-weight: normal;
 }
 
 h1 {
@@ -160,6 +171,10 @@ h3 {
     margin-bottom: .5rem;
 }
 
+h3 a {
+    color: #f94500;
+}
+
 h4 {
     font-family: gilroy-extrabold, Arial, Helvetica, sans-serif;
     margin-bottom: 0;
@@ -182,17 +197,17 @@ p {
 
 @media only screen and (min-width: 720px) {
     .section2 {
-      -webkit-box-orient: horizontal;
-      -webkit-box-direction: normal;
-          -ms-flex-direction: row;
-              flex-direction: row;
-      margin-bottom: 6rem;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        margin-bottom: 6rem;
     }
 }
 
 @media only screen and (min-width: 720px) {
     .section2 .first,
-  .section2 .second {
+    .section2 .second {
       width: 50%;
     }
 }
@@ -211,8 +226,15 @@ p {
       background-size: 720px auto;
     }
 }
-  .section2 .second {
-    padding: 1rem 4rem;
+
+.section2 .second {
+    padding: 1rem 2rem;
+}
+
+@media only screen and (min-width: 720px) {
+    .section2 .second {
+        padding: 1rem 4rem;
+    }
 }
 
 .section2 .second h4 {
@@ -244,8 +266,10 @@ p {
 }
 
 .work-grid img {
+    background-color: #4463ad;
     border-radius: 8px;
-    box-shadow: 0 1px 1px rgba(0,0,0,0.12), 0 8px 8px rgba(0,0,0,0.12), 0 16px 16px rgba(0,0,0,0.12);
+    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.12), 0 8px 8px rgba(0,0,0,0.12), 0 16px 16px rgba(0,0,0,0.12);
+            box-shadow: 0 1px 1px rgba(0,0,0,0.12), 0 8px 8px rgba(0,0,0,0.12), 0 16px 16px rgba(0,0,0,0.12);
     -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
@@ -259,22 +283,20 @@ p {
 .work-grid [href] {
   overflow-wrap: break-word;
   word-wrap: break-word;
-  -ms-word-break: break-all;
   word-break: break-all;
   word-break: break-word;
-  -ms-hyphens: auto;
-  -moz-hyphens: auto;
   -webkit-hyphens: auto;
-  hyphens: auto;
+      -ms-hyphens: auto;
+          hyphens: auto;
 }
 
 @media only screen and (min-width: 540px) {
     .work-grid {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
 }
 
 .work-grid li {
@@ -296,6 +318,36 @@ footer {
 }
 
 footer .small {
+    color: #000;
     font-size: 14px;
-    color: #666;
+}
+
+@media (prefers-color-scheme: dark) {
+	body {
+		background-color: #4463ad;
+		color: #eef5f1;
+    }
+
+    a {
+        color: #b4f3bc;
+    }
+    
+    a.btn {
+        border-color:#f9ae00;
+        color: #f9ae00;
+    }
+
+    a.btn:hover, a.btn:focus {
+        border-color: #f9ae00;
+        background-color: #f9ae00;
+        color: #634a30;
+    }
+
+    h3 a {
+        color: #f9ae00;
+    }
+
+    footer .small {
+        color: #eef5f1;
+    }
 }
