--- a/css/resume.css
+++ b/css/resume.css
@@ -127,7 +127,8 @@ a {
 
 h1,
 h2,
-h3 {
+h3,
+h4 {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     font-family: 'gilroy-extrabold';
