--- a/css/resume.css
+++ b/css/resume.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 @font-face {
     font-family: 'courier_primeregular';
     src: url('/fonts/courier_prime-webfont.woff2') format('woff2'),
@@ -50,8 +57,10 @@ dd {
 
 /* Set core body defaults */
 body {
-    font-family: courier_primeregular, Arial, Helvetica, sans-serif;
+    background-color: #eef5f1;
     font-display: swap;
+    font-family: courier_primeregular, -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
+    font-size: 100%;
     min-height: 100vh;
     scroll-behavior: smooth;
     text-rendering: optimizeSpeed;
@@ -74,19 +83,6 @@ a:not([class]) {
 img {
   max-width: 100%;
   display: block;
-}
-
-/* Natural flow and rhythm in articles by default */
-article > * + * {
-  margin-top: 1em;
-}
-
-/* Inherit fonts for inputs and buttons */
-input,
-button,
-textarea,
-select {
-  font: inherit;
 }
 
 /* Remove all animations and transitions for people that prefer not to see them */
@@ -127,11 +123,10 @@ a {
 
 h1,
 h2,
-h3,
-h4 {
+h3 {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    font-family: 'gilroy-extrabold';
+    font-family: 'gilroy-extrabold',-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
     font-weight: normal;
 }
 
@@ -147,31 +142,32 @@ h2 {
 
 h3 {
     font-size: 1.5rem;
+    text-transform: uppercase;
 }
 
 h4 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Colo, -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
     font-size: 1.15rem;
     font-weight: 400;
 }
 
 h4 strong {
-    font-family: 'gilroy-extrabold';
-    font-weight: bold;;
+    font-family: 'gilroy-extrabold',-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
+    font-weight: bold;
 }
 
 /* RESUME */
 .resume {
+    background-color: #fff;
     border: 1px solid #ccc;
     border-radius: 10px;
     -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.12), 0 8px 8px rgba(0,0,0,0.12), 0 16px 16px rgba(0,0,0,0.12);
             box-shadow: 0 1px 1px rgba(0,0,0,0.12), 0 8px 8px rgba(0,0,0,0.12), 0 16px 16px rgba(0,0,0,0.12);
     display: grid;
-    font-size: 16px;
     display: -ms-grid;
     display: grid;
     grid-gap: 2vw;
-            grid-template-areas:
+        grid-template-areas:
         "photo"
         "name"
         "about"
@@ -189,16 +185,9 @@ h4 strong {
     width: 1280px;
 }
 
-/* .resume {
-    border: 1px solid;
-    margin: 0 auto;
-    width : 210mm;
-    height: 297mm;
-} */
-
 @media only screen and (min-width: 780px) {
     .resume {
-                grid-template-areas:
+            grid-template-areas:
             "name  photo"
             "work  about"
             "work  skills"
@@ -242,7 +231,7 @@ h4 strong {
     grid-area: photo;
     -webkit-box-pack: center;
     -ms-flex-pack: center;
-    justify-content: center;;
+    justify-content: center;
 }
 
 .photo picture {
@@ -282,6 +271,13 @@ h4 strong {
     grid-area: community;
 }
 
+.community,
+.skills,
+.about {
+    hyphens: auto;
+    text-align: justify;
+}
+
 @media only screen and (min-width: 780px) {
     .name {
         -ms-grid-row: 1;
@@ -316,7 +312,7 @@ h4 strong {
 
 .resume--date {
     display: block;
-    font-size: 14px;
+    font-size: 0.875rem;
     line-height: 2;
     opacity: .75;
 }
@@ -331,6 +327,6 @@ footer p {
 }
 
 footer .small {
-    font-size: 14px;
+    font-size: 0.875rem;
     color: #666;
 }
